Bug 15082 - The pcap background queue process should not be stopped
Summary: The pcap background queue process should not be stopped
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Printing (show other bugs)
Version: 4.16.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-30 15:42 UTC by Andreas Schneider
Modified: 2022-07-18 11:18 UTC (History)
4 users (show)

See Also:


Attachments
patch for 4.16 (3.75 KB, patch)
2022-07-01 07:12 UTC, Andreas Schneider
no flags Details
patch for 4.16 (3.69 KB, patch)
2022-07-01 07:14 UTC, Andreas Schneider
jra: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2022-05-30 15:42:09 UTC
Currently the background queue process seems to die with samba-dcerpcd. However if you have a lot of printers the could get into a big problem. Loading a printer from cups and updating pcap can take ~1s. If you have 60 printers it will take 60seconds to load all the printers. So the process should not be stopped but run in the background all the time.
Comment 1 Samba QA Contact 2022-06-30 22:09:12 UTC
This bug was referenced in samba master:

9080cd30d517cb50954e440bb4475c2eeb678906
Comment 2 Andreas Schneider 2022-07-01 07:12:54 UTC
Created attachment 17402 [details]
patch for 4.16
Comment 3 Andreas Schneider 2022-07-01 07:14:05 UTC
Created attachment 17403 [details]
patch for 4.16
Comment 4 Jeremy Allison 2022-07-01 16:28:45 UTC
Re-assigning to Jule for inclusion in 4.16.next.
Comment 5 Jule Anger 2022-07-11 10:21:25 UTC
Pushed to autobuild-v4-16-test.
Comment 6 Samba QA Contact 2022-07-11 11:34:11 UTC
This bug was referenced in samba v4-16-test:

cce25171f7e24ce39693677c9edcdc584f8d9db4
Comment 7 Jule Anger 2022-07-12 13:47:47 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2022-07-18 11:18:26 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.3):

cce25171f7e24ce39693677c9edcdc584f8d9db4